<resources>
    <string name="app_name">GoodBites</string>
    <string name="COMMON_ACCEPT">Aceitar</string>
    <string name="COMMON_SAVE">Guardar</string>
    <string name="COMMON_REMOVE">Remover</string>
    <string name="COMMON_RESET">Reiniciar</string>
    <string name="COMMON_DESCRIPTION">Descrição</string>
    <string name="COMMON_FOLLOWS">A seguir</string>
    <string name="COMMON_NO_FOLLOWS">Não segues ninguem</string>
    <string name="COMMON_FOLLOWERS">Seguidores</string>
    <string name="COMMON_NO_FOLLOWERS">Sem seguidores</string>
    <string name="COMMON_FOLLOWED">Seguido</string>
    <string name="COMMON_FOLLOW_REQUESTS">Pedidos para seguir</string>
    <string name="COMMON_NO_FOLLOW_REQUESTS">Sem pedidos para seguir</string>
    <string name="COMMON_REMOVE_FOLLOW">Deixar de seguir</string>
    <string name="COMMON_NUTRITION_KCAL">%1$.1f kcal</string>
    <string name="COMMON_NUTRITION_PERC">%1$.1f %%</string>
    <string name="COMMON_NUTRITION_GRAMS">%1$.1f g</string>
    <string name="COMMON_OFFLINE">Estás offline…</string>
    <string name="COMMON_NO_RESULTS">Sem resultados…</string>
    <string name="COMMON_ZERO">0</string>
    <string name="COMMON_FILTER_MEAT">Carne</string>
    <string name="COMMON_FILTER_FISH">Peixe</string>
    <string name="COMMON_FILTER_SOUP">Sopa</string>
    <string name="COMMON_FILTER_VEGI">Salada</string>
    <string name="COMMON_FILTER_FRUIT">Fruta</string>
    <string name="COMMON_FILTER_DRINK">Bebida</string>
    <string name="COMMON_CONTENT_DESC_BACK_BUTTON">Botão de voltar</string>
    <string name="COMMON_CONTENT_DESC_NOTIFICATIONS_BUTTON">Botão de notificações</string>
    <string name="COMMON_CONTENT_DESC_AUTHOR_IMAGE">Imagem de Autor</string>
    <string name="COMMON_CONTENT_VERIFIED_SEAL">Sêlo de verificado</string>
    <string name="COMMON_CONTENT_PREMIUM_SEAL">Sêlo de Premium</string>
    <string name="COMMON_CONTENT_DESC_ADD_REGISTER">Adicionar registo</string>
    <string name="COMMON_CONTENT_DESC_ADD_BASKET">Abrir lista de compras</string>
    <string name="COMMON_CONTENT_DESC_PREVIOUS_MONTH">Mês anterior</string>
    <string name="COMMON_CONTENT_DESC_NEXT_MONTH">Mês seguinte</string>
    <string name="COMMON_CONTENT_DESC_MONTH_VIEW">Ver mês</string>
    <string name="COMMON_CONTENT_DESC_WEEK_VIEW">Ver semana</string>
    <string name="COMMON_CONTENT_DESC_CALENDAR_ICON">Ícone de calendário</string>
    <string name="COMMON_DIALOG_YES">Sim</string>
    <string name="COMMON_DIALOG_NO">Não</string>
    <string name="COMMON_DIALOG_CANCEL">Cancelar</string>
    <string name="COMMON_DIALOG_SELECT">Selecionar</string>
    <string name="COMMON_DIALOG_SKIP">Ignorar</string>
    <string name="COMMON_DIALOG_CATEGORY_TITLE">Seleciona uma categoria</string>
    <string name="COMMON_DIALOG_DATE_TITLE">Seleciona uma data</string>
    <string name="COMMON_DIALOG_TIME_TITLE">Seleciona um horário</string>
    <string name="COMMON_DIALOG_PORTION_TITLE">Seleciona uma porção</string>
    <string name="DATA_NOT_UPDATED">Dados não atualizados, alguma coisa se passou.</string>
    <string name="DATA_UPDATED">Dados atualizados com sucesso.</string>
    <string name="USER_ERROR_GENDER_INVALID">Insira um sexo válido.</string>
    <string name="USER_ERROR_HEIGHT_INVALID">Insira uma altura.</string>
    <string name="USER_ERROR_HEIGHT_INVALID_2">Insira uma entre %1$.1f m and %2$.1f m.</string>
    <string name="USER_ERROR_WEIGHT_INVALID">Insira um peso.</string>
    <string name="USER_ERROR_WEIGHT_INVALID_2">Insira um peso entre %1$.1f kg a %2$.1f kg.</string>
    <string name="USER_ERROR_ACTIVITY_LEVEL_INVALID">Insira um nivel de atividade.</string>
    <string name="NAME">Nome</string>
    <string name="USERNAME">Nome de Utilizador</string>
    <string name="DATE">Data</string>
    <string name="PLACEHOLDER_DEFAULT_IMAGE_DESCRIPTION">Sem descrição.</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_VERIFIED">Verificadas</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_ALL">Todas</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_SUGGESTIONS">Sugestões</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_RECENT">Mais recentes</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_SAVED">Mais guardadas</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_RANDOM">Ao calhas</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_LIKED">Mais gostadas</string>
    <string name="FRAGMENT_RECIPE_LISTING_FILTER_PERSONALIZED_SUGGESTIONS">Sugestões personalizadas</string>
    <string name="FRAGMENT_RECIPE_LISTING_WELCOME">Bem vindo</string>
    <string name="FRAGMENT_RECIPE_LISTING_USER_NAME_PLACEHOLDER">Nome Proprio</string>
    <string name="FRAGMENT_RECIPE_LISTING_SEARCH_HINT">Procurar receita</string>
    <string name="FRAGMENT_RECIPE_LISTING_SEARCH_DESC">Campo de pesquisa de receitas</string>
    <string name="FRAGMENT_RECIPE_LISTING_NO_RECIPES">Não há receitas…</string>
    <string name="FRAGMENT_RECIPE_DETAIL_AUTHOR_PLACEHOLDER">Autor</string>
    <string name="FRAGMENT_RECIPE_DETAIL_NR_COMMENT">%1$d Comentário</string>
    <string name="FRAGMENT_RECIPE_DETAIL_NR_COMMENTS">%1$d Comentários</string>
    <string name="ITEM_PREPARATION">%1$d Passo</string>
    <string name="ITEM_PREPARATION_STEP_PLACEHOLDER">1</string>
    <string name="ITEM_PREPARATION_NUMBER_STEP_PLACEHOLDER">nº Step</string>
    <string name="FRAGMENT_RECIPE_DETAIL_AUTHOR_FIRST_SURNAME_PLACEHOLDER">First and Last name</string>
    <string name="FRAGMENT_RECIPE_TAB_CATEGORY_LABEL">Categorias</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_CATEGORY_LABEL">nº Categorias</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_INGREDIENTS_LABEL">nº Ingredients</string>
    <string name="FRAGMENT_RECIPE_TAB_INGREDIENTS_LABEL">Ingridientes</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_PREPARATION_LABEL">nº Passos</string>
    <string name="FRAGMENT_RECIPE_TAB_PREPARATION_LABEL">Preparação</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_CATEGORY">1 Categoria</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_CATEGORIES">%1$d Categorias</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_INGREDIENT">1 Ingrediente</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_INGREDIENTS">%1$d Ingredientes</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_PREPARATION">1 Passo</string>
    <string name="FRAGMENT_RECIPE_TAB_NUMBER_PREPARATIONS">%1$d Passos</string>
    <string name="FRAGMENT_NUTRITION_TAB_PERCENTAGE_PLACEHOLDER">0 %</string>
    <string name="FRAGMENT_NUTRITION_TAB_GRAMS_PLACEHOLDER">0 g</string>
    <string name="FRAGMENT_NUTRITION_TAB_ENERGY_LABEL">Energia</string>
    <string name="FRAGMENT_NOTIFICATION_TITLE">Notificações</string>
    <string name="FRAGMENT_NUTRITION_TAB_PROTEIN_LABEL">Proteina</string>
    <string name="FRAGMENT_NUTRITION_TAB_FAT_LABEL">Gordura</string>
    <string name="FRAGMENT_NUTRITION_TAB_FAT_SATURATED_LABEL">dos quais saturados</string>
    <string name="FRAGMENT_NUTRITION_TAB_CARBOHYDRATES_LABEL">Hidratos de carbono</string>
    <string name="FRAGMENT_NUTRITION_TAB_SUGAR_LABEL">dos quais açúcares</string>
    <string name="FRAGMENT_NUTRITION_TAB_SALT_LABEL">Sal</string>
    <string name="FRAGMENT_NUTRITION_TAB_FIBER_LABEL">Fibra</string>
    <string name="FRAGMENT_NUTRITION_TAB_WARRANT">Leia atentamente o rótulo dos produtos que usar como ingredientes, estes valores são apenas estimativas e devem ser tomadas como tal.</string>
    <string name="FRAGMENT_COMMENTS_TITLE">Comentários</string>
    <string name="COMMENT_ITEM_LAYOUT_COMMENT_TEXT">Comentário…</string>
    <string name="COMMENT_ITEM_LAYOUT_COMMENT">Comentar</string>
    <string name="COMMENT_ITEM_LAYOUT_EDIT">Editar</string>
    <string name="COMMENT_ITEM_LAYOUT_DELETE">Apagar</string>
    <string name="COMMENT_ITEM_LAYOUT_DELETE_DIALOG_TITLE">Apagar Comentário</string>
    <string name="COMMENT_ITEM_LAYOUT_DELETE_DIALOG_MESSAGE">Tens a certeza que queres apagar este comentário?</string>
    <string name="COMMENT_ITEM_LAYOUT_LIKES_DEFAULT">0 Gostos</string>
    <string name="COMMENT_ITEM_LAYOUT_LIKES">%1$d Gostos</string>
    <string name="FRAGMENT_CALENDAR_TITLE">Calendário</string>
    <string name="FRAGMENT_CALENDAR_MONTH_YEAR">Julho de 2023</string>
    <string name="FRAGMENT_CALENDAR_VIEW_MONTH">Mês</string>
    <string name="FRAGMENT_CALENDAR_VIEW_WEEK">Semana</string>
    <string name="FRAGMENT_CALENDAR_DAY_SUN">DOM</string>
    <string name="FRAGMENT_CALENDAR_DAY_MON">SEG</string>
    <string name="FRAGMENT_CALENDAR_DAY_TUE">TER</string>
    <string name="FRAGMENT_CALENDAR_DAY_WED">QUA</string>
    <string name="FRAGMENT_CALENDAR_DAY_THU">QUI</string>
    <string name="FRAGMENT_CALENDAR_DAY_FRI">SEX</string>
    <string name="FRAGMENT_CALENDAR_DAY_SAT">SAB</string>
    <string name="FRAGMENT_CALENDAR_DATE_PLACEHOLDER">00/00/0000</string>
    <string name="FRAGMENT_CALENDAR_REGISTERS_COUNT">(0)</string>
    <string name="FRAGMENT_CALENDAR_MEALS">Refeições</string>
    <string name="FRAGMENT_CALENDAR_NO_RESULTS">Sem refeições…</string>
    <string name="CALENDER_PORTION_DIALOG_TITLE">Preferencias de porção</string>
    <string name="CALENDER_PORTION_DIALOG_MAIN_DESCRIPTION">Notamos que és um novo membro, e ainda não tens uma porção pré-definida.Queres Adicionar?</string>
    <string name="CALENDER_PORTION_DIALOG_PRIMARY_DESCRIPTION">Escolhe o numero de pessoas para a porção pré-defenida:</string>
    <string name="CALENDER_PORTION_DIALOG_FOOTER_DESCRIPTION">Esta opção é usada para ajustar a quantidade de uma receita de acordo com as preferências do usuário, facilitando o cálculo dos ingredientes necessários. Mesmo que não definas agora podereas sempre alterar através do perfil, ou ao adicionar uma receita ao calendário.</string>
    <string name="CALENDER_PORTION_DIALOG_NUMBER_TITLE">Seleciona o numero de pessoas</string>
    <string name="FRAGMENT_NEW_CALENDER_ENTRY">%1$d Pessoas</string>
    <string name="FRAGMENT_RECIPE_LISTING_TAB_COMMENT">Comentados</string>
    <string name="tab_created">Criados</string>
    <string name="tab_saved">Guardados</string>
    <string name="tab_liked">Curtidas</string>
    <string name="tab_last_seen">Ultimas receitas vistas</string>
    <string name="FRAGMENT_FOLLOWER_SEARCH_HINT">Procurar utilizadores …</string>
    <string name="ITEM_FOLLOWER_REQUEST_SEND">Seguir</string>
    <string name="ITEM_FOLLOWER_REQUEST_SENT">Pedido enviado</string>
    <string name="ITEM_FOLLOWER_REQUEST_CANCEL">Cancelar pedido</string>
    <string name="fragment_goal_create_goal_tab_ideal_weight_title">Peso Ideal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_birthdate">Enter birthdate address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="invalid_birthdate">Invalid birthdate entered, please use the format dd/mm/yyyy</string>
    <string name="invalid_birthdate_2">Invalid birthdate entered, you\'re yet to be born?</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="invalid_password_1">User\'s password is too short</string>
    <string name="ingredients">Ingredients</string>
    <string name="calender">Calendário</string>
    <string name="offline_text">Utilizador está offline…</string>
    <string name="fragment_send_us_a_message_message_title">Title</string>
    <string name="fragment_send_us_a_message_message">Message</string>
    <string name="fragment_send_us_a_message_send">Send</string>
    <string name="fragment_go_back">Go back</string>
    <string name="fragment_send_us_a_message_description">Some text discribing this fragment, and warning user for its abuse con.</string>
</resources>