<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.calendar.CalendarFragment">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fedoka"
        android:text="@string/FRAGMENT_CALENDAR_TITLE"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addRegisterIB"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_default"
        android:backgroundTint="@color/main_color"
        android:contentDescription="@string/COMMON_CONTENT_DESC_ADD_REGISTER"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/addBasketIB"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_default"
        android:backgroundTint="@color/main_color"
        android:contentDescription="@string/COMMON_CONTENT_DESC_ADD_BASKET"
        android:src="@drawable/ic_shopping_basket"
        app:layout_constraintEnd_toStartOf="@+id/addRegisterIB"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout14"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <ImageButton
            android:id="@+id/previous_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/COMMON_CONTENT_DESC_PREVIOUS_MONTH"
            android:rotation="-180"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_regular"
            android:textStyle="bold"
            android:text="@string/FRAGMENT_CALENDAR_MONTH_YEAR"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/COMMON_CONTENT_DESC_NEXT_MONTH"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout14">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/monthViewBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/layout_bg"
            app:backgroundTint="@color/main_color"
            android:padding="0dp"
            android:contentDescription="@string/COMMON_CONTENT_DESC_MONTH_VIEW"
            android:text="@string/FRAGMENT_CALENDAR_VIEW_MONTH"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/weeklyViewBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/layout_bg"
            app:backgroundTint="@color/grayLightBTN"
            android:padding="0dp"
            android:contentDescription="@string/COMMON_CONTENT_DESC_WEEK_VIEW"
            android:text="@string/FRAGMENT_CALENDAR_VIEW_WEEK"
            android:textColor="@color/main_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_SUN"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_MON"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_TUE"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_WED"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_THU"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_FRI"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRAGMENT_CALENDAR_DAY_SAT"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="11sp" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calMonthRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calWeeklyRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="#E3E3E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout2" />

    <LinearLayout
        android:id="@+id/headerDateCatLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/COMMON_CONTENT_DESC_CALENDAR_ICON"
            android:src="@drawable/ic_calender"
            app:tint="#505050" />

        <TextView
            android:id="@+id/registersDateTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:alpha="0.8"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/FRAGMENT_CALENDAR_DATE_PLACEHOLDER"
            android:textAlignment="gravity"
            android:textSize="@dimen/headerCat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/headerRegistersCatLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <TextView
            android:id="@+id/nRegistersTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:alpha="0.8"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/FRAGMENT_CALENDAR_REGISTERS_COUNT"
            android:textAlignment="gravity"
            android:textSize="@dimen/headerCat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:alpha="0.8"
            android:fontFamily="@font/fredoka_regular"
            android:text="@string/FRAGMENT_CALENDAR_MEALS"
            android:textAlignment="gravity"
            android:textSize="@dimen/headerCat" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_entries_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDateCatLL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emptyRegTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_main_color"
        android:elevation="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/FRAGMENT_CALENDAR_NO_RESULTS"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:cornerRadius="24dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_regular"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.474" />

</androidx.constraintlayout.widget.ConstraintLayout>
