<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.settings.sendUsAMessage.SendUsAMessageFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:elevation="8dp"
        android:fontFamily="@font/fredoka_regular"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/fragment_send_us_a_message_send"
        app:iconGravity="end"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topTab"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/layout_bg_rounded_2_corners_v1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backIB"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/fragment_go_back"
            android:elevation="1dp"
            android:outlineProvider="none"
            android:src="@drawable/ic_back_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topTab" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fedoka"
            android:text="@string/fragment_send_us_a_message_title"
            android:textColor="@color/color_3"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/backIB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backIB" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/fragment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/fedoka"
        android:text="@string/fragment_send_us_a_message_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTab" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/fragment_send_us_a_message_message_title"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_description"
        app:startIconDrawable="@drawable/ic_title">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/fragment_send_us_a_message_message"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="@+id/titleTL"
        app:layout_constraintStart_toStartOf="@+id/titleTL"
        app:layout_constraintTop_toBottomOf="@+id/titleTL"
        app:counterEnabled="true"
        app:counterMaxLength="255">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minLines="5"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>